try a fix for detail map on iphone CU-ajz3ju

--- a/src/styles/templates/blocks/_block-map.scss
+++ b/src/styles/templates/blocks/_block-map.scss
@@ -13,6 +13,7 @@
   .map {
     &__content {
       padding: 0px;
+      height: 100%;
     }
     &__container {
       width: 100%;
